--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    android {
+        useLibrary 'org.apache.http.legacy'
+    }
     compile 'com.android.support:appcompat-v7:23.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
@@ -38,6 +40,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     compile files('libs/mysql-connector-java-3.0.17-ga-bin.jar')
     testCompile 'junit:junit:4.12'
 
