--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,14 +80,23 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustResize|adjustPan">
         </activity>
         <activity
             android:name=".RecylerViewMain"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.mainuddin.icab12.RecylerViewMain" />
+        </activity>
+        <activity
+            android:name=".LoginActivityD"
+            android:label="@string/title_activity_login_d"
             android:theme="@style/AppTheme.NoActionBar"
-            />
+            android:windowSoftInputMode="stateHidden|adjustResize|adjustPan">
+        </activity>
     </application>
 
 </manifest>
